--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,7 @@
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "qrcode": "^1.5.4"
   }
 }
