--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "path": "^0.12.7",
