--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,21 +17,22 @@ jobs:
     runs-on: self-hosted
     strategy:
       matrix:
-        node-version: [22.x]
+        node-version: [20.x, 22.x]
 
     steps:
     - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+        cache-dependency-path: ./Backend/package-lock.json
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-      working-directory: ./backend
-    - run: npm run build
-      working-directory: ./backend
-    - run: npm run test
-      working-directory: ./backend
+      working-directory: ./Backend
     - run: |
         touch .env
         echo "${{ secrets.BACKEND_ENV_FILE }}" > .env
