--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^4.0.4",
     "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
